[rain-setting] fix setting
