# ai_tnhn/ai-frontend-tnhn/src/api/setting.js
@@ -6,6 +6,12 @@ const settingApi = {
     },
     updateFloodLevels: (levels) => {
         return axiosClient.put('/admin/settings/flood-levels', levels);
+    },
+    getRainSetting: () => {
+        return axiosClient.get('/admin/settings/rain');
+    },
+    updateRainSetting: (data) => {
+        return axiosClient.put('/admin/settings/rain', data);
     }
 };
 
